syntax = "proto3";

option csharp_namespace = "ApiBox.Api.gRPC";

service Greeter {
	rpc SayHello(GreetingRequest) returns (GreetingReply);
}

message GreetingRequest {
	string name = 1;
}

message GreetingReply {
	string content = 1;
}
